src/parser/parser.automaton
State 0:
## Known stack suffix:
##
## LR(1) items:
parse_stmt' -> . parse_stmt [ # ]
## Transitions:
-- On WHILE shift to state 1
-- On USCORE shift to state 89
-- On SUB shift to state 3
-- On STR_LIT shift to state 4
-- On RETURN shift to state 92
-- On NULL shift to state 5
-- On MODULE_ID shift to state 6
-- On LSBRAC shift to state 7
-- On LPAREN shift to state 9
-- On LNOT shift to state 10
-- On LCBRAC shift to state 94
-- On INT_LIT shift to state 11
-- On INT shift to state 97
-- On IF shift to state 101
-- On ID shift to state 105
-- On FOR shift to state 122
-- On CONTINUE shift to state 124
-- On CONST shift to state 125
-- On CHAR_LIT shift to state 15
-- On CHAR shift to state 126
-- On BREAK shift to state 141
-- On BOOL_LIT shift to state 16
-- On BOOL shift to state 128
-- On BNOT shift to state 17
-- On varDecl shift to state 142
-- On stmt shift to state 183
-- On sourceList shift to state 145
-- On parse_stmt shift to state 185
-- On multiDecl shift to state 153
-- On moduleAccess shift to state 24
-- On incompleteStmt shift to state 154
-- On functionCall shift to state 25
-- On fieldAccess shift to state 26
-- On expr_or_uscore shift to state 156
-- On expr shift to state 161
-- On destList shift to state 164
-- On dataType shift to state 169
-- On constant_expr shift to state 44
-- On completeStmt shift to state 172
-- On cast shift to state 45
-- On block shift to state 173
-- On arrayLiteral shift to state 47
-- On arrayInit shift to state 174
-- On arrayAccess shift to state 48
## Reductions:

State 1:
## Known stack suffix:
## WHILE
## LR(1) items:
completeStmt -> WHILE . LPAREN expr RPAREN stmt [ WHILE USCORE SUB STR_LIT SCOLON RPAREN RETURN RCBRAC NULL MODULE_ID LSBRAC LPAREN LNOT LCBRAC INT_LIT INT IF ID FOR EOF ELSE CONTINUE CONST CHAR_LIT CHAR BREAK BOOL_LIT BOOL BNOT ]
## Transitions:
-- On LPAREN shift to state 2
## Reductions:

State 2:
## Known stack suffix:
## WHILE LPAREN
## LR(1) items:
completeStmt -> WHILE LPAREN . expr RPAREN stmt [ WHILE USCORE SUB STR_LIT SCOLON RPAREN RETURN RCBRAC NULL MODULE_ID LSBRAC LPAREN LNOT LCBRAC INT_LIT INT IF ID FOR EOF ELSE CONTINUE CONST CHAR_LIT CHAR BREAK BOOL_LIT BOOL BNOT ]
## Transitions:
-- On SUB shift to state 3
-- On STR_LIT shift to state 4
-- On NULL shift to state 5
-- On MODULE_ID shift to state 6
-- On LSBRAC shift to state 7
-- On LPAREN shift to state 9
-- On LNOT shift to state 10
-- On INT_LIT shift to state 11
-- On ID shift to state 12
-- On CHAR_LIT shift to state 15
-- On BOOL_LIT shift to state 16
-- On BNOT shift to state 17
-- On sourceList shift to state 18
-- On moduleAccess shift to state 24
-- On functionCall shift to state 25
-- On fieldAccess shift to state 26
-- On expr shift to state 87
-- On constant_expr shift to state 44
-- On cast shift to state 45
-- On arrayLiteral shift to state 47
-- On arrayAccess shift to state 48
## Reductions:

State 3:
## Known stack suffix:
## SUB
## LR(1) items:
expr -> SUB . expr [ SUB SCOLON RSBRAC RPAREN PERIOD NEQ MUL MOD LTE LT LSBRAC LOR LAND GTE GT EQ DIV DEQ COMMA BOR BAND ADD ]
## Transitions:
-- On SUB shift to state 3
-- On STR_LIT shift to state 4
-- On NULL shift to state 5
-- On MODULE_ID shift to state 6
-- On LSBRAC shift to state 7
-- On LPAREN shift to state 9
-- On LNOT shift to state 10
-- On INT_LIT shift to state 11
-- On ID shift to state 12
-- On CHAR_LIT shift to state 15
-- On BOOL_LIT shift to state 16
-- On BNOT shift to state 17
-- On sourceList shift to state 18
-- On moduleAccess shift to state 24
-- On functionCall shift to state 25
-- On fieldAccess shift to state 26
-- On expr shift to state 86
-- On constant_expr shift to state 44
-- On cast shift to state 45
-- On arrayLiteral shift to state 47
-- On arrayAccess shift to state 48
## Reductions:

State 4:
## Known stack suffix:
## STR_LIT
## LR(1) items:
constant_expr -> STR_LIT . [ SUB SCOLON RSBRAC RPAREN PERIOD NEQ MUL MOD LTE LT LSBRAC LOR LAND GTE GT EQ DIV DEQ COMMA BOR BAND ADD ]
## Transitions:
## Reductions:
-- On SUB SCOLON RSBRAC RPAREN PERIOD NEQ MUL MOD LTE LT LSBRAC LOR LAND GTE GT EQ DIV DEQ COMMA BOR BAND ADD
--   reduce production constant_expr -> STR_LIT

State 5:
## Known stack suffix:
## NULL
## LR(1) items:
constant_expr -> NULL . [ SUB SCOLON RSBRAC RPAREN PERIOD NEQ MUL MOD LTE LT LSBRAC LOR LAND GTE GT EQ DIV DEQ COMMA BOR BAND ADD ]
## Transitions:
## Reductions:
-- On SUB SCOLON RSBRAC RPAREN PERIOD NEQ MUL MOD LTE LT LSBRAC LOR LAND GTE GT EQ DIV DEQ COMMA BOR BAND ADD
--   reduce production constant_expr -> NULL

State 6:
## Known stack suffix:
## MODULE_ID
## LR(1) items:
sourceList -> MODULE_ID . [ PERIOD LSBRAC ID ]
## Transitions:
## Reductions:
-- On PERIOD LSBRAC ID
--   reduce production sourceList -> MODULE_ID

State 7:
## Known stack suffix:
## LSBRAC
## LR(1) items:
arrayLiteral -> LSBRAC . exprList RSBRAC [ SUB SCOLON RSBRAC RPAREN PERIOD NEQ MUL MOD LTE LT LSBRAC LOR LAND GTE GT EQ DIV DEQ COMMA BOR BAND ADD ]
arrayLiteral -> LSBRAC . exprList COMMA RSBRAC [ SUB SCOLON RSBRAC RPAREN PERIOD NEQ MUL MOD LTE LT LSBRAC LOR LAND GTE GT EQ DIV DEQ COMMA BOR BAND ADD ]
arrayLiteral -> LSBRAC . RSBRAC [ SUB SCOLON RSBRAC RPAREN PERIOD NEQ MUL MOD LTE LT LSBRAC LOR LAND GTE GT EQ DIV DEQ COMMA BOR BAND ADD ]
## Transitions:
-- On SUB shift to state 3
-- On STR_LIT shift to state 4
-- On RSBRAC shift to state 8
-- On NULL shift to state 5
-- On MODULE_ID shift to state 6
-- On LSBRAC shift to state 7
-- On LPAREN shift to state 9
-- On LNOT shift to state 10
-- On INT_LIT shift to state 11
-- On ID shift to state 12
-- On CHAR_LIT shift to state 15
-- On BOOL_LIT shift to state 16
-- On BNOT shift to state 17
-- On sourceList shift to state 18
-- On moduleAccess shift to state 24
-- On functionCall shift to state 25
-- On fieldAccess shift to state 26
-- On exprList shift to state 82
-- On expr shift to state 71
-- On constant_expr shift to state 44
-- On cast shift to state 45
-- On arrayLiteral shift to state 47
-- On arrayAccess shift to state 48
## Reductions:

State 8:
## Known stack suffix:
## LSBRAC RSBRAC
## LR(1) items:
arrayLiteral -> LSBRAC RSBRAC . [ SUB SCOLON RSBRAC RPAREN PERIOD NEQ MUL MOD LTE LT LSBRAC LOR LAND GTE GT EQ DIV DEQ COMMA BOR BAND ADD ]
## Transitions:
## Reductions:
-- On SUB SCOLON RSBRAC RPAREN PERIOD NEQ MUL MOD LTE LT LSBRAC LOR LAND GTE GT EQ DIV DEQ COMMA BOR BAND ADD
--   reduce production arrayLiteral -> LSBRAC RSBRAC

State 9:
## Known stack suffix:
## LPAREN
## LR(1) items:
cast -> LPAREN . INT RPAREN [ SUB STR_LIT NULL MODULE_ID LSBRAC LPAREN LNOT INT_LIT ID CHAR_LIT BOOL_LIT BNOT ]
cast -> LPAREN . CHAR RPAREN [ SUB STR_LIT NULL MODULE_ID LSBRAC LPAREN LNOT INT_LIT ID CHAR_LIT BOOL_LIT BNOT ]
expr -> LPAREN . expr RPAREN [ SUB SCOLON RSBRAC RPAREN PERIOD NEQ MUL MOD LTE LT LSBRAC LOR LAND GTE GT EQ DIV DEQ COMMA BOR BAND ADD ]
## Transitions:
-- On SUB shift to state 3
-- On STR_LIT shift to state 4
-- On NULL shift to state 5
-- On MODULE_ID shift to state 6
-- On LSBRAC shift to state 7
-- On LPAREN shift to state 9
-- On LNOT shift to state 10
-- On INT_LIT shift to state 11
-- On INT shift to state 76
-- On ID shift to state 12
-- On CHAR_LIT shift to state 15
-- On CHAR shift to state 78
-- On BOOL_LIT shift to state 16
-- On BNOT shift to state 17
-- On sourceList shift to state 18
-- On moduleAccess shift to state 24
-- On functionCall shift to state 25
-- On fieldAccess shift to state 26
-- On expr shift to state 80
-- On constant_expr shift to state 44
-- On cast shift to state 45
-- On arrayLiteral shift to state 47
-- On arrayAccess shift to state 48
## Reductions:

State 10:
## Known stack suffix:
## LNOT
## LR(1) items:
expr -> LNOT . expr [ SUB SCOLON RSBRAC RPAREN PERIOD NEQ MUL MOD LTE LT LSBRAC LOR LAND GTE GT EQ DIV DEQ COMMA BOR BAND ADD ]
## Transitions:
-- On SUB shift to state 3
-- On STR_LIT shift to state 4
-- On NULL shift to state 5
-- On MODULE_ID shift to state 6
-- On LSBRAC shift to state 7
-- On LPAREN shift to state 9
-- On LNOT shift to state 10
-- On INT_LIT shift to state 11
-- On ID shift to state 12
-- On CHAR_LIT shift to state 15
-- On BOOL_LIT shift to state 16
-- On BNOT shift to state 17
-- On sourceList shift to state 18
-- On moduleAccess shift to state 24
-- On functionCall shift to state 25
-- On fieldAccess shift to state 26
-- On expr shift to state 75
-- On constant_expr shift to state 44
-- On cast shift to state 45
-- On arrayLiteral shift to state 47
-- On arrayAccess shift to state 48
## Reductions:

State 11:
## Known stack suffix:
## INT_LIT
## LR(1) items:
constant_expr -> INT_LIT . [ SUB SCOLON RSBRAC RPAREN PERIOD NEQ MUL MOD LTE LT LSBRAC LOR LAND GTE GT EQ DIV DEQ COMMA BOR BAND ADD ]
## Transitions:
## Reductions:
-- On SUB SCOLON RSBRAC RPAREN PERIOD NEQ MUL MOD LTE LT LSBRAC LOR LAND GTE GT EQ DIV DEQ COMMA BOR BAND ADD
--   reduce production constant_expr -> INT_LIT

State 12:
## Known stack suffix:
## ID
## LR(1) items:
expr -> ID . [ SUB SCOLON RSBRAC RPAREN PERIOD NEQ MUL MOD LTE LT LSBRAC LOR LAND GTE GT EQ DIV DEQ COMMA BOR BAND ADD ]
functionCall -> ID . LPAREN exprList RPAREN [ SUB SCOLON RSBRAC RPAREN PERIOD NEQ MUL MOD LTE LT LSBRAC LOR LAND GTE GT EQ DIV DEQ COMMA BOR BAND ADD ]
functionCall -> ID . LPAREN RPAREN [ SUB SCOLON RSBRAC RPAREN PERIOD NEQ MUL MOD LTE LT LSBRAC LOR LAND GTE GT EQ DIV DEQ COMMA BOR BAND ADD ]
## Transitions:
-- On LPAREN shift to state 13
## Reductions:
-- On SUB SCOLON RSBRAC RPAREN PERIOD NEQ MUL MOD LTE LT LSBRAC LOR LAND GTE GT EQ DIV DEQ COMMA BOR BAND ADD
--   reduce production expr -> ID

State 13:
## Known stack suffix:
## ID LPAREN
## LR(1) items:
functionCall -> ID LPAREN . exprList RPAREN [ SUB SCOLON RSBRAC RPAREN PERIOD NEQ MUL MOD LTE LT LSBRAC LOR LAND GTE GT EQ DIV DEQ COMMA BOR BAND ADD ]
functionCall -> ID LPAREN . RPAREN [ SUB SCOLON RSBRAC RPAREN PERIOD NEQ MUL MOD LTE LT LSBRAC LOR LAND GTE GT EQ DIV DEQ COMMA BOR BAND ADD ]
## Transitions:
-- On SUB shift to state 3
-- On STR_LIT shift to state 4
-- On RPAREN shift to state 14
-- On NULL shift to state 5
-- On MODULE_ID shift to state 6
-- On LSBRAC shift to state 7
-- On LPAREN shift to state 9
-- On LNOT shift to state 10
-- On INT_LIT shift to state 11
-- On ID shift to state 12
-- On CHAR_LIT shift to state 15
-- On BOOL_LIT shift to state 16
-- On BNOT shift to state 17
-- On sourceList shift to state 18
-- On moduleAccess shift to state 24
-- On functionCall shift to state 25
-- On fieldAccess shift to state 26
-- On exprList shift to state 73
-- On expr shift to state 71
-- On constant_expr shift to state 44
-- On cast shift to state 45
-- On arrayLiteral shift to state 47
-- On arrayAccess shift to state 48
## Reductions:

State 14:
## Known stack suffix:
## ID LPAREN RPAREN
## LR(1) items:
functionCall -> ID LPAREN RPAREN . [ SUB SCOLON RSBRAC RPAREN PERIOD NEQ MUL MOD LTE LT LSBRAC LOR LAND GTE GT EQ DIV DEQ COMMA BOR BAND ADD ]
## Transitions:
## Reductions:
-- On SUB SCOLON RSBRAC RPAREN PERIOD NEQ MUL MOD LTE LT LSBRAC LOR LAND GTE GT EQ DIV DEQ COMMA BOR BAND ADD
--   reduce production functionCall -> ID LPAREN RPAREN

State 15:
## Known stack suffix:
## CHAR_LIT
## LR(1) items:
constant_expr -> CHAR_LIT . [ SUB SCOLON RSBRAC RPAREN PERIOD NEQ MUL MOD LTE LT LSBRAC LOR LAND GTE GT EQ DIV DEQ COMMA BOR BAND ADD ]
## Transitions:
## Reductions:
-- On SUB SCOLON RSBRAC RPAREN PERIOD NEQ MUL MOD LTE LT LSBRAC LOR LAND GTE GT EQ DIV DEQ COMMA BOR BAND ADD
--   reduce production constant_expr -> CHAR_LIT

State 16:
## Known stack suffix:
## BOOL_LIT
## LR(1) items:
constant_expr -> BOOL_LIT . [ SUB SCOLON RSBRAC RPAREN PERIOD NEQ MUL MOD LTE LT LSBRAC LOR LAND GTE GT EQ DIV DEQ COMMA BOR BAND ADD ]
## Transitions:
## Reductions:
-- On SUB SCOLON RSBRAC RPAREN PERIOD NEQ MUL MOD LTE LT LSBRAC LOR LAND GTE GT EQ DIV DEQ COMMA BOR BAND ADD
--   reduce production constant_expr -> BOOL_LIT

State 17:
## Known stack suffix:
## BNOT
## LR(1) items:
expr -> BNOT . expr [ SUB SCOLON RSBRAC RPAREN PERIOD NEQ MUL MOD LTE LT LSBRAC LOR LAND GTE GT EQ DIV DEQ COMMA BOR BAND ADD ]
## Transitions:
-- On SUB shift to state 3
-- On STR_LIT shift to state 4
-- On NULL shift to state 5
-- On MODULE_ID shift to state 6
-- On LSBRAC shift to state 7
-- On LPAREN shift to state 9
-- On LNOT shift to state 10
-- On INT_LIT shift to state 11
-- On ID shift to state 12
-- On CHAR_LIT shift to state 15
-- On BOOL_LIT shift to state 16
-- On BNOT shift to state 17
-- On sourceList shift to state 18
-- On moduleAccess shift to state 24
-- On functionCall shift to state 25
-- On fieldAccess shift to state 26
-- On expr shift to state 72
-- On constant_expr shift to state 44
-- On cast shift to state 45
-- On arrayLiteral shift to state 47
-- On arrayAccess shift to state 48
## Reductions:

State 18:
## Known stack suffix:
## sourceList
## LR(1) items:
functionCall -> sourceList . PERIOD ID LPAREN exprList RPAREN [ SUB SCOLON RSBRAC RPAREN PERIOD NEQ MUL MOD LTE LT LSBRAC LOR LAND GTE GT EQ DIV DEQ COMMA BOR BAND ADD ]
functionCall -> sourceList . PERIOD ID LPAREN RPAREN [ SUB SCOLON RSBRAC RPAREN PERIOD NEQ MUL MOD LTE LT LSBRAC LOR LAND GTE GT EQ DIV DEQ COMMA BOR BAND ADD ]
moduleAccess -> sourceList . PERIOD ID [ SUB SCOLON RSBRAC RPAREN PERIOD NEQ MUL MOD LTE LT LSBRAC LOR LAND GTE GT EQ DIV DEQ COMMA BOR BAND ADD ]
sourceList -> sourceList . PERIOD MODULE_ID [ PERIOD ]
## Transitions:
-- On PERIOD shift to state 19
## Reductions:

State 19:
## Known stack suffix:
## sourceList PERIOD
## LR(1) items:
functionCall -> sourceList PERIOD . ID LPAREN exprList RPAREN [ SUB SCOLON RSBRAC RPAREN PERIOD NEQ MUL MOD LTE LT LSBRAC LOR LAND GTE GT EQ DIV DEQ COMMA BOR BAND ADD ]
functionCall -> sourceList PERIOD . ID LPAREN RPAREN [ SUB SCOLON RSBRAC RPAREN PERIOD NEQ MUL MOD LTE LT LSBRAC LOR LAND GTE GT EQ DIV DEQ COMMA BOR BAND ADD ]
moduleAccess -> sourceList PERIOD . ID [ SUB SCOLON RSBRAC RPAREN PERIOD NEQ MUL MOD LTE LT LSBRAC LOR LAND GTE GT EQ DIV DEQ COMMA BOR BAND ADD ]
sourceList -> sourceList PERIOD . MODULE_ID [ PERIOD LSBRAC ID ]
## Transitions:
-- On MODULE_ID shift to state 20
-- On ID shift to state 21
## Reductions:

State 20:
## Known stack suffix:
## sourceList PERIOD MODULE_ID
## LR(1) items:
sourceList -> sourceList PERIOD MODULE_ID . [ PERIOD LSBRAC ID ]
## Transitions:
## Reductions:
-- On PERIOD LSBRAC ID
--   reduce production sourceList -> sourceList PERIOD MODULE_ID
